Diğer pluginlerin altyapısı hazırlanıyor. Eğitimler plugini tamamlandı.

--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -47,6 +47,7 @@
         </div>
     </div>
     <div flex style="margin: 5px;">
+        <p>{{content.first_paragraph}}</p>
         <p>
             It's ironic—the company that offers credit monitoring and ID theft protection solutions has itself been compromised, exposing personal information of as many as 143 million Americans—that's almost half the country.
             Equifax, one of the three largest credit reporting firm in the United States, admitted today that it had suffered a massive data breach somewhere between mid-May and July this year, which it actually discovered on July 29—that means the data of 143 million people were exposed for over 3 months.
