--- a/app/src/assets/css/style.css
+++ b/app/src/assets/css/style.css
@@ -148,3 +148,8 @@ md-input-container .md-input{
     position: absolute;
     bottom: 0;
 }
+md-input-container{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
