Plugin veri yapısı düzenlendi

--- a/app/src/client/partials/route/route.page.html
+++ b/app/src/client/partials/route/route.page.html
@@ -76,7 +76,7 @@
     <div flex>
         <md-chips ng-model="content.tags" readonly="true"></md-chips>
     </div>
-    <div flex="noshrink" layout="column" >
+    <div hide flex="noshrink" layout="column" >
         <div flex="init" style><h3>YORUMLAR</h3></div>
         <write-comment attr="content"></write-comment>
         <comment-base></comment-base>
