--- a/app/src/client/partials/route/route.adminpage.html
+++ b/app/src/client/partials/route/route.adminpage.html
@@ -1,3 +1,24 @@
+<div ng-show="!admin.editable" flex layout="row" style="height: 100%; padding: 5px; margin-top: 10px;">
+    <div flex="40" style="background-color: cornflowerblue; padding: 5px;">
+        <h2>Konular</h2>
+        <div ng-repeat="subject in admin.subjects" ng-click="admin.getSubject($index)" style="height: 20px; margin-top: 3px; background-color: #a4a4a4; border: solid 1px #1f1f1f">
+            {{subject.title}}
+        </div>
+    </div>
+    <div flex="60" style="background-color: #e2473f; padding: 5px;">
+        <h2>Sayfalar</h2>
+        <div ng-if="admin.selectedSubject != undefined" style="height: 20px; background-color: #d2d2d2; margin-top: 3px; padding: 2px; border: solid 1px #1f1f1f">
+            <div ng-click="admin.newPage()">
+                Yeni Sayfa
+            </div>
+        </div>
+        <div ng-repeat="page in admin.pagelist" style="height: 20px; background-color: #d2d2d2; margin-top: 3px; padding: 2px; border: solid 1px #1f1f1f;">
+            <div ng-click="admin.editPage($index)">
+                {{page}}
+            </div>
+        </div>
+    </div>
+</div>
 <div ng-show="admin.editable" flex layout="row" style="height: 100%; padding: 5px; margin-top: 10px;">
     <div id="left_editor" flex="40">
         <div flex="initial" style="margin-top: 10px;">
@@ -55,30 +76,13 @@
                     </div>
                 </div>
             </div>
-            <div flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
+            <div ng-if="admin.selectedPage != undefined" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
                 <md-button class="md-raised md-primary" ng-click="admin.update()" style="margin: 0; padding: 0;">Güncelle</md-button>
             </div>
-        </div>
-    </div>
-</div>
-<div ng-show="!admin.editable" flex layout="row" style="height: 100%; padding: 5px; margin-top: 10px;">
-    <div flex="40" style="background-color: cornflowerblue; padding: 5px;">
-        <h2>Konular</h2>
-        <div ng-repeat="subject in admin.subjects" ng-click="admin.getSubject($index)" style="height: 20px; margin-top: 3px; background-color: #a4a4a4; border: solid 1px #1f1f1f">
-            {{subject.title}}
-        </div>
-    </div>
-    <div flex="60" style="background-color: #e2473f; padding: 5px;">
-        <h2>Sayfalar</h2>
-        <div ng-if="admin.selectedSubject != undefined" style="height: 20px; background-color: #d2d2d2; margin-top: 3px; padding: 2px; border: solid 1px #1f1f1f">
-            <div ng-click="admin.newPage()">
-                Yeni Sayfa
-            </div>
-        </div>
-        <div ng-repeat="page in admin.pagelist" style="height: 20px; background-color: #d2d2d2; margin-top: 3px; padding: 2px; border: solid 1px #1f1f1f;">
-            <div ng-click="admin.editPage($index)">
-                {{page}}
+            <div ng-if="admin.selectedPage == undefined" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
+                <md-button class="md-raised md-primary" ng-click="admin.create()" style="margin: 0; padding: 0;">Oluştur</md-button>
             </div>
         </div>
     </div>
 </div>
+
