--- a/app/src/client/partials/route/route.adminpage.html
+++ b/app/src/client/partials/route/route.adminpage.html
@@ -14,16 +14,16 @@
         </div>
         <div ng-repeat="page in admin.pagelist" style="height: 20px; background-color: #d2d2d2; margin-top: 3px; padding: 2px; border: solid 1px #1f1f1f;">
             <div ng-click="admin.editPage($index)">
-                {{page}}
+                {{page.title}}
             </div>
         </div>
     </div>
 </div>
-<div ng-show="admin.editable" flex layout="row" style="height: 100%; padding: 5px; margin-top: 10px;">
+<div ng-show="admin.editable" ng-init="init();" flex layout="row" style="height: 100%; padding: 5px; margin-top: 10px;">
     <div id="left_editor" flex="40">
         <div flex="initial" style="margin-top: 10px;">
             <md-input-container md-no-float class="md-block">
-                <input ng-model="admin.title" placeholder="Sayfa Başlığı">
+                <input ng-model="admin.selectedPage.title" placeholder="Sayfa Başlığı">
             </md-input-container>
         </div>
         <div flex="initial" style="padding-left: 2px; padding-right: 2px; margin-top: 10px;">
@@ -35,7 +35,7 @@
         <div flex="initial" style="margin-top: 20px;">
             <md-input-container>
                 <label>Elementi Seç</label>
-                <md-select ng-model="admin.input.name" >
+                <md-select ng-model="admin.input.type_name" >
                     <md-option ng-repeat="element in admin.element_types" ng-value="element.name" ng-selected="$first">
                         {{element.name}}
                     </md-option>
@@ -58,6 +58,7 @@
             </div>
             <div flex="initial" style="margin-top: 10px;">
                 <md-button class="md-raised md-primary" ng-click="admin.action()" style="margin: 0; padding: 0;">{{admin.state}}</md-button>
+                <md-button class="md-raised md-warn" ng-click="admin.deleteElement()" style="margin: 0; padding: 0;">SİL</md-button>
             </div>
 
         </div>
@@ -72,7 +73,7 @@
             <div flex="initial" style="margin-top: 5px; padding: 5px;" sv-root sv-part="admin.elements">
                 <div flex ng-repeat="item in admin.elements" sv-element>
                     <div flex class="padded list_item" md-whiteframe="2" ng-click="admin.editElements($index)" layout layout-align="none center" style="padding: 5px; border: dashed 1px; margin-top: 3px;">
-                        <div>{{item.name}}</div>
+                        <div>{{item.type_name}}</div>
                     </div>
                 </div>
             </div>
