--- a/app/src/client/partials/route/route.adminpage.html
+++ b/app/src/client/partials/route/route.adminpage.html
@@ -25,6 +25,9 @@
             <md-input-container md-no-float class="md-block">
                 <input ng-model="admin.selectedPage.title" placeholder="Sayfa Başlığı">
             </md-input-container>
+            <md-input-container md-no-float class="md-block">
+                <input ng-model="admin.selectedPage.desc" placeholder="Özet">
+            </md-input-container>
         </div>
         <div flex="initial" style="padding-left: 2px; padding-right: 2px; margin-top: 10px;">
             <md-input-container class="md-block" style="background-color: #d3d3d3; height: 100%; margin: unset; padding: unset; border-top: 1px solid #a4a4a4">
@@ -77,10 +80,10 @@
                     </div>
                 </div>
             </div>
-            <div ng-if="admin.selectedPage != undefined" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
+            <div ng-if="!admin.newpage" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
                 <md-button class="md-raised md-primary" ng-click="admin.update()" style="margin: 0; padding: 0;">Güncelle</md-button>
             </div>
-            <div ng-if="admin.selectedPage == undefined" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
+            <div ng-if="admin.newpage" flex="initial" layout="row" layout-align="end center" style="padding: 5px;">
                 <md-button class="md-raised md-primary" ng-click="admin.create()" style="margin: 0; padding: 0;">Oluştur</md-button>
             </div>
         </div>
