--- a/app/src/client/partials/route/route.news.html
+++ b/app/src/client/partials/route/route.news.html
@@ -1,8 +1,9 @@
 <div style="height: 100%; margin-top: 10px;" >
-    <page-title title="page_title"></page-title>
+    <!--<page-title title="page_title"></page-title>
     <thumb-container>
         <thumb-news attr="content"></thumb-news>
         <thumb-news attr="content"></thumb-news>
         <thumb-news attr="content"></thumb-news>
-    </thumb-container>
+    </thumb-container>-->
+    <h1>Sayfa Yapım Aşamasında</h1>
 </div>
